--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
     import { getFirestore, collection, doc, getDocs, setDoc, query, where } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyAPFlx9gVV6Q0a8Bwv4Et0OfytgIWApQng",
-      authDomain: "clms-3b972.firebaseapp.com",
-      projectId: "clms-3b972",
-      storageBucket: "clms-3b972.appspot.com",  // fixed this line
-      messagingSenderId: "213199198013",
-      appId: "1:213199198013:web:4a576ce4f4af68469b1754"
-    };
+    apiKey: "AIzaSyC_lvF65P7vaKYnKEMrpHfJroMe-vh3w4U",
+    authDomain: "quizapp-f370d.firebaseapp.com",
+    projectId: "quizapp-f370d",
+    storageBucket: "quizapp-f370d.appspot.com",
+    messagingSenderId: "822956185807",
+    appId: "1:822956185807:web:831411b98aacc662c33fba"
+  };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
