--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LMS Login</title>
-  <base href="/YOUR-REPO-NAME/" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body, html { height: 100%; margin: 0; font-family: 'Segoe UI', sans-serif; }
@@ -78,12 +77,12 @@
         </div>
 
         <form id="loginForm">
-          <input type="hidden" id="loginRole" value="student" />
+          <input type="hidden" id="loginRole" value="student">
           <div class="mb-3">
-            <input type="email" class="form-control" placeholder="Email ID" id="loginEmail" required />
+            <input type="email" class="form-control" placeholder="Email ID" id="loginEmail" required>
           </div>
           <div class="mb-3">
-            <input type="password" class="form-control" placeholder="Password" id="loginPassword" required />
+            <input type="password" class="form-control" placeholder="Password" id="loginPassword" required>
           </div>
           <button type="submit" class="btn login-btn w-100">Login</button>
           <p class="mt-3 text-center">Don’t have an account? <span class="text-link" onclick="showRegister()">Sign Up</span></p>
@@ -94,13 +93,13 @@
       <div class="register-box hidden" id="registerBox">
         <h3 class="text-center">Register</h3>
         <form id="registerForm">
-          <input type="hidden" id="registerRole" value="student" />
-          <div class="mb-2"><input type="text" class="form-control" placeholder="First Name*" id="regFirstName" required /></div>
-          <div class="mb-2"><input type="text" class="form-control" placeholder="Last Name*" id="regLastName" required /></div>
-          <div class="mb-2"><input type="email" class="form-control" placeholder="Email ID*" id="regEmail" required /></div>
-          <div class="mb-2"><input type="text" class="form-control" placeholder="Mobile No.*" id="regMobile" required /></div>
-          <div class="mb-2"><input type="text" class="form-control" placeholder="Enrollment No.*" id="regEnrollment" required /></div>
-          <div class="mb-2"><input type="password" class="form-control" placeholder="Password*" id="regPassword" required /></div>
+          <input type="hidden" id="registerRole" value="student">
+          <div class="mb-2"><input type="text" class="form-control" placeholder="First Name*" id="regFirstName" required></div>
+          <div class="mb-2"><input type="text" class="form-control" placeholder="Last Name*" id="regLastName" required></div>
+          <div class="mb-2"><input type="email" class="form-control" placeholder="Email ID*" id="regEmail" required></div>
+          <div class="mb-2"><input type="text" class="form-control" placeholder="Mobile No.*" id="regMobile" required></div>
+          <div class="mb-2"><input type="text" class="form-control" placeholder="Enrollment No.*" id="regEnrollment" required></div>
+          <div class="mb-2"><input type="password" class="form-control" placeholder="Password*" id="regPassword" required></div>
           <button type="submit" class="btn login-btn w-100 mt-2">Submit</button>
           <p class="mt-3 text-center">Already have an account? <span class="text-link" onclick="showLogin()">Login</span></p>
         </form>
@@ -111,7 +110,7 @@
   <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getFirestore, collection, doc, getDocs, setDoc, query, where } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+    import { getFirestore, collection, doc, getDoc, getDocs, setDoc, query, where } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
     apiKey: "AIzaSyC_lvF65P7vaKYnKEMrpHfJroMe-vh3w4U",
@@ -137,22 +136,11 @@
       document.getElementById('registerBox').classList.add('hidden');
       document.getElementById('loginBox').classList.remove('hidden');
     };
-
     window.selectRole = (role) => {
       document.getElementById('loginRole').value = role;
-      // Remove btn-primary from both buttons
-      document.getElementById('studentBtn').classList.remove('btn-primary');
-      document.getElementById('adminBtn').classList.remove('btn-primary');
-      // Add btn-primary to selected role button
-      if (role === 'student') {
-        document.getElementById('studentBtn').classList.add('btn-primary');
-      } else {
-        document.getElementById('adminBtn').classList.add('btn-primary');
-      }
+      document.getElementById('studentBtn').classList.toggle('btn-primary', role === 'student');
+      document.getElementById('adminBtn').classList.toggle('btn-primary', role === 'admin');
     };
-
-    // Initialize role button selection on load
-    window.selectRole('student');
 
     // Register student
     document.getElementById('registerForm').addEventListener('submit', async (e) => {
@@ -163,18 +151,15 @@
       try {
         const q = query(collection(db, "students"), where("email", "==", email));
         const querySnapshot = await getDocs(q);
-        if (!querySnapshot.empty) {
-          alert("Email already registered.");
-          return;
-        }
+        if (!querySnapshot.empty) return alert("Email already registered.");
 
         const studentData = {
           firstName: document.getElementById('regFirstName').value,
           lastName: document.getElementById('regLastName').value,
-          email,
+          email: email,
           mobile: document.getElementById('regMobile').value,
           enrollment: document.getElementById('regEnrollment').value,
-          password
+          password: password
         };
 
         const docRef = doc(collection(db, "students"));
@@ -202,30 +187,31 @@
           alert("Invalid admin credentials.");
         }
       } else {
-        const q = query(collection(db, "students"), where("email", "==", email));
-        const querySnapshot = await getDocs(q);
+  const q = query(collection(db, "students"), where("email", "==", email));
+  const querySnapshot = await getDocs(q);
 
-        if (querySnapshot.empty) {
-          alert("No account found.");
-          return;
-        }
-        const student = querySnapshot.docs[0].data();
-        if (student.password === password) {
-          alert("Student login successful!");
+  if (querySnapshot.empty) {
+    alert("No account found.");
+  } else {
+    const student = querySnapshot.docs[0].data();
+    if (student.password === password) {
+      alert("Student login successful!");
 
-          // Store only essential info securely
-          localStorage.setItem("student", JSON.stringify({
-            firstName: student.firstName,
-            lastName: student.lastName,
-            enrollment: student.enrollment,
-            email: student.email
-          }));
+      // ✅ Store student data securely (only essential info)
+      localStorage.setItem("student", JSON.stringify({
+        firstName: student.firstName,
+        lastName: student.lastName,
+        enrollment: student.enrollment,
+        email: student.email
+      }));
 
-          window.location.href = "Student/student_dashboard.html";
-        } else {
-          alert("Invalid password.");
-        }
-      }
+      window.location.href = "Student/student_dashboard.html";
+    } else {
+      alert("Invalid password.");
+    }
+  }
+}
+
     });
   </script>
 </body>
