fix firebase issue

--- a/Admin/upload_material.html
+++ b/Admin/upload_material.html
@@ -53,12 +53,12 @@
 
   // --- Firebase Config (unchanged) ---
   const firebaseConfig = {
-    apiKey: "AIzaSyAPFlx9gVV6Q0a8Bwv4Et0OfytgIWApQng",
-    authDomain: "clms-3b972.firebaseapp.com",
-    projectId: "clms-3b972",
-    storageBucket: "clms-3b972.appspot.com",
-    messagingSenderId: "213199198013",
-    appId: "1:213199198013:web:4a576ce4f4af68469b1754"
+    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
+    authDomain: "clms-dbfe1.firebaseapp.com",
+    projectId: "clms-dbfe1",
+    storageBucket: "clms-dbfe1.firebasestorage.app",
+    messagingSenderId: "1025852714357",
+    appId: "1:1025852714357:web:282d74003f389767ad773c"
   };
 
   const app = initializeApp(firebaseConfig);
