--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
     import { getFirestore, collection, doc, getDoc, getDocs, setDoc, query, where } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
-    apiKey: "AIzaSyC_lvF65P7vaKYnKEMrpHfJroMe-vh3w4U",
-    authDomain: "quizapp-f370d.firebaseapp.com",
-    projectId: "quizapp-f370d",
-    storageBucket: "quizapp-f370d.appspot.com",
-    messagingSenderId: "822956185807",
-    appId: "1:822956185807:web:831411b98aacc662c33fba"
+    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
+    authDomain: "clms-dbfe1.firebaseapp.com",
+    projectId: "clms-dbfe1",
+    storageBucket: "clms-dbfe1.firebasestorage.app",
+    messagingSenderId: "1025852714357",
+    appId: "1:1025852714357:web:282d74003f389767ad773c"
   };
 
     const app = initializeApp(firebaseConfig);
