fix admin navigation

--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -58,9 +58,9 @@
       <!-- Sidebar -->
       <div class="col-md-3 sidebar">
         <h4 class="mb-4">Admin Panel</h4>
-        <a href="admin-courses.html" class="active">Add Course</a>
+        <a href="admin_courses.html" class="active">Add Course</a>
         <a href="courseHistory.html">Courses History</a>
-        <a href="admin-dashboard.html" onclick="logout()">← Back</a>
+        <a href="admin_dashboard.html" onclick="logout()">← Back</a>
       </div>
 
       <!-- Main Content -->
