--- a/Admin/admin_dashboard.html
+++ b/Admin/admin_dashboard.html
@@ -57,8 +57,8 @@
       <!-- Sidebar -->
       <div class="col-md-3 sidebar">
         <h4 class="mb-4">Admin Panel</h4>
-        <a href="admin-dashboard.html" class="active">Dashboard</a>
-        <a href="admin-courses.html">Courses</a>
+        <a href="admin_dashboard.html" class="active">Dashboard</a>
+        <a href="admin_courses.html">Courses</a>
         <a href="create_assignment.html">Assignment</a>
         <a href="upload_material.html">Upload Material</a>
         <a href="assignments.html">Students</a>
