fix admin navigation

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       if (role === "admin") {
         if (email === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
           alert("Admin login successful!");
-          window.location.href = "admin/admin_dashboard.html";
+          window.location.href = "Admin/admin_dashboard.html";
         } else {
           alert("Invalid admin credentials.");
         }
