--- a/Admin/admin_courses.html
+++ b/Admin/admin_courses.html
@@ -2,20 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Add Course</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
     body {
       background-color: #f4f6f9;
+      margin: 0;
+      font-family: 'Inter', sans-serif; /* Using Inter font */
     }
 
-    .sidebar {
-      height: 100vh;
+    /* Toggle button styling */
+    .toggle-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1100;
       background-color: #2A5C88;
       color: white;
-      padding: 1rem;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      cursor: pointer;
+      display: none; /* hidden by default */
+    }
+
+    /* Show toggle button only on small screens */
+    @media (max-width: 767.98px) {
+      .toggle-btn {
+        display: block;
+      }
+      .sidebar.show + .main-content {
+        /* Adjust main content when sidebar is shown on small screens */
+        transform: translateX(250px);
+        transition: transform 0.3s ease-in-out;
+      }
+    }
+
+    /* Sidebar styles for large screens */
+    @media (min-width: 768px) {
+      .sidebar {
+        height: 100vh;
+        background-color: #2A5C88;
+        color: white;
+        padding: 1rem;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 250px;
+        overflow-y: auto;
+      }
+
+      .main-content {
+        margin-left: 250px;
+        padding: 2rem;
+      }
+    }
+
+    /* Sidebar styles for small screens - hidden by default */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px;
+        background-color: #2A5C88;
+        padding: 1rem;
+        color: white;
+        overflow-y: auto;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 1099;
+      }
+
+      .sidebar.show {
+        transform: translateX(0);
+      }
+
+      .main-content {
+        margin-left: 0;
+        padding: 2rem 1rem;
+      }
     }
 
     .sidebar a {
@@ -27,12 +97,9 @@
       border-radius: 8px;
     }
 
-    .sidebar a:hover, .sidebar a.active {
+    .sidebar a:hover,
+    .sidebar a.active {
       background-color: #1f4568;
-    }
-
-    .main-content {
-      padding: 2rem;
     }
 
     .card {
@@ -53,10 +120,14 @@
   </style>
 </head>
 <body>
+
+  <!-- Toggle button for mobile -->
+  <button class="toggle-btn">☰ Menu</button>
+
   <div class="container-fluid">
     <div class="row">
       <!-- Sidebar -->
-      <div class="col-md-3 sidebar">
+      <div class="col-md-3 sidebar" id="sidebar">
         <h4 class="mb-4">Admin Panel</h4>
         <a href="admin_courses.html" class="active">Add Course</a>
         <a href="courseHistory.html">Courses History</a>
@@ -96,6 +167,7 @@
           </div>
           <button type="submit" class="btn btn-primary">Create Course</button>
         </form>
+        <div id="statusMessage" class="alert mt-3" style="display:none;"></div>
       </div>
     </div>
   </div>
@@ -105,53 +177,70 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
-   const firebaseConfig = {
-    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-    authDomain: "clms-dbfe1.firebaseapp.com",
-    projectId: "clms-dbfe1",
-    storageBucket: "clms-dbfe1.firebasestorage.app",
-    messagingSenderId: "1025852714357",
-    appId: "1:1025852714357:web:282d74003f389767ad773c"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
+      authDomain: "clms-dbfe1.firebaseapp.com",
+      projectId: "clms-dbfe1",
+      storageBucket: "clms-dbfe1.firebasestorage.app",
+      messagingSenderId: "1025852714357",
+      appId: "1:1025852714357:web:282d74003f389767ad773c"
+    };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    const statusMessageDiv = document.getElementById("statusMessage");
+
+    function showStatusMessage(message, type = 'info') {
+      statusMessageDiv.textContent = message;
+      statusMessageDiv.className = `alert mt-3 alert-${type}`;
+      statusMessageDiv.style.display = 'block';
+      setTimeout(() => {
+        statusMessageDiv.style.display = 'none';
+      }, 3000); // Hide after 3 seconds
+    }
+
     document.getElementById("courseForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
+      e.preventDefault();
 
-  const title = document.getElementById("courseTitle").value.trim();
-  const startDate = document.getElementById("startDate").value;
-  const endDate = document.getElementById("endDate").value;
-  const weeks = parseInt(document.getElementById("weeks").value); // ✅ Get weeks
+      const title = document.getElementById("courseTitle").value.trim();
+      const startDate = document.getElementById("startDate").value;
+      const endDate = document.getElementById("endDate").value;
+      const weeks = parseInt(document.getElementById("weeks").value);
 
-  const subjects = [];
-  ['java', 'python', 'html', 'css', 'js', 'sql'].forEach(id => {
-    const el = document.getElementById(id);
-    if (el && el.checked) subjects.push(el.value);
-  });
+      const subjects = [];
+      ['java', 'python', 'html', 'css', 'js', 'sql'].forEach(id => {
+        const el = document.getElementById(id);
+        if (el && el.checked) subjects.push(el.value);
+      });
 
-  const course = {
-    title,
-    startDate,
-    endDate,
-    weeks, // ✅ Add weeks to the object
-    subjects,
-    createdAt: new Date().toISOString()
-  };
+      const course = {
+        title,
+        startDate,
+        endDate,
+        weeks,
+        subjects,
+        createdAt: new Date().toISOString()
+      };
 
-  try {
-    await addDoc(collection(db, "courses"), course);
-    alert("Course added successfully!");
-    document.getElementById("courseForm").reset();
-  } catch (err) {
-    alert("Error: " + err.message);
-  }
-});
+      try {
+        await addDoc(collection(db, "courses"), course);
+        showStatusMessage("Course added successfully!", "success");
+        document.getElementById("courseForm").reset();
+      } catch (err) {
+        showStatusMessage("Error: " + err.message, "danger");
+      }
+    });
 
     function logout() {
       window.location.href = "index.html";
     }
+
+    document.querySelector('.toggle-btn').addEventListener('click', () => {
+    const sidebar = document.getElementById('sidebar');
+    sidebar.classList.toggle('show');
+  });
+    
   </script>
 </body>
 </html>
