--- a/Admin/courseHistory.html
+++ b/Admin/courseHistory.html
@@ -2,20 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Course History</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
     body {
       background-color: #f4f6f9;
+      margin: 0;
+      font-family: 'Inter', sans-serif; /* Using Inter font */
     }
 
-    .sidebar {
-      height: 100vh;
+    /* Toggle button styling */
+    .toggle-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1100;
       background-color: #2A5C88;
       color: white;
-      padding: 1rem;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      cursor: pointer;
+      display: none; /* hidden by default */
+    }
+
+    /* Show toggle button only on small screens */
+    @media (max-width: 767.98px) {
+      .toggle-btn {
+        display: block;
+      }
+      .sidebar.show + .main-content {
+        /* Adjust main content when sidebar is shown on small screens */
+        transform: translateX(250px);
+        transition: transform 0.3s ease-in-out;
+      }
+    }
+
+    /* Sidebar styles for large screens */
+    @media (min-width: 768px) {
+      .sidebar {
+        height: 100vh;
+        background-color: #2A5C88;
+        color: white;
+        padding: 1rem;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 250px;
+        overflow-y: auto;
+      }
+
+      .main-content {
+        margin-left: 250px;
+        padding: 2rem;
+      }
+    }
+
+    /* Sidebar styles for small screens - hidden by default */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px;
+        background-color: #2A5C88;
+        padding: 1rem;
+        color: white;
+        overflow-y: auto;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 1099;
+      }
+
+      .sidebar.show {
+        transform: translateX(0);
+      }
+
+      .main-content {
+        margin-left: 0;
+        padding: 2rem 1rem;
+      }
     }
 
     .sidebar a {
@@ -27,12 +97,9 @@
       border-radius: 8px;
     }
 
-    .sidebar a:hover, .sidebar a.active {
+    .sidebar a:hover,
+    .sidebar a.active {
       background-color: #1f4568;
-    }
-
-    .main-content {
-      padding: 2rem;
     }
 
     .card {
@@ -57,6 +124,7 @@
       top: 0; left: 0; bottom: 0; right: 0;
       background: rgba(0,0,0,0.5);
       z-index: 1040;
+      display: none; /* hidden by default */
     }
 
     .modal-custom {
@@ -73,18 +141,35 @@
       padding: 1.5rem;
       max-height: 80vh;
       overflow-y: auto;
+      display: none; /* hidden by default */
+    }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
     }
   </style>
 </head>
 <body>
+
+  <!-- Toggle button -->
+  <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
   <div class="container-fluid">
     <div class="row">
       <!-- Sidebar -->
-      <div class="col-md-3 sidebar">
+      <div class="col-md-3 sidebar" id="sidebar">
         <h4 class="mb-4">Admin Panel</h4>
-        <a href="admin_courses.html" class="active">Add Course</a>
-        <a href="courseHistory.html">Courses History</a>
-       <a href="admin_dashboard.html" onclick="logout()">← Back</a>
+        <a href="admin_courses.html">Add Course</a>
+        <a href="courseHistory.html" class="active">Courses History</a>
+        <a href="admin_dashboard.html" onclick="logout()">← Back</a>
       </div>
 
       <!-- Main Content -->
@@ -99,13 +184,16 @@
   </div>
 
   <!-- Modal container -->
-  <div id="modalBackdrop" class="modal-backdrop" style="display:none;"></div>
-  <div id="modal" class="modal-custom" style="display:none;">
+  <div id="modalBackdrop" class="modal-backdrop"></div>
+  <div id="modal" class="modal-custom">
     <h5>Select Students to Allow Access</h5>
     <div id="studentCheckboxes" style="max-height: 300px; overflow-y: auto; margin-bottom: 1rem;"></div>
     <button id="saveAccessBtn" class="btn btn-primary">Save</button>
     <button id="cancelModalBtn" class="btn btn-secondary ms-2">Cancel</button>
   </div>
+
+  <!-- Custom Status Message -->
+  <div id="statusMessage" class="alert"></div>
 
   <!-- Firebase + JS -->
   <script type="module">
@@ -128,59 +216,78 @@
   const weekList = document.getElementById("weekList");
   const subjectList = document.getElementById("subjectList");
   const backButton = document.getElementById("backButton");
-  const sidebar = document.querySelector(".sidebar");
-  const mainContent = document.querySelector(".main-content");
 
   const modalBackdrop = document.getElementById("modalBackdrop");
   const modal = document.getElementById("modal");
   const studentCheckboxes = document.getElementById("studentCheckboxes");
   const saveAccessBtn = document.getElementById("saveAccessBtn");
   const cancelModalBtn = document.getElementById("cancelModalBtn");
+  const statusMessageDiv = document.getElementById("statusMessage");
 
   let currentCourseId = null;
   let currentCourseTitle = null;
   let allStudents = [];
 
+  // Function to show custom status messages
+  function showStatusMessage(message, type = 'info') {
+    statusMessageDiv.textContent = message;
+    statusMessageDiv.className = `alert mt-3 alert-${type}`;
+    statusMessageDiv.style.display = 'block';
+    setTimeout(() => {
+      statusMessageDiv.style.display = 'none';
+    }, 3000); // Hide after 3 seconds
+  }
+
   // Load all registered students from Firestore "students" collection
   async function loadStudents() {
-    const studentsSnap = await getDocs(collection(db, "students"));
-    allStudents = studentsSnap.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+    try {
+      const studentsSnap = await getDocs(collection(db, "students"));
+      allStudents = studentsSnap.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+    } catch (error) {
+      console.error("Error loading students:", error);
+      showStatusMessage("Error loading students.", "danger");
+    }
   }
 
   async function loadCourses() {
     courseList.innerHTML = "";
-    const snapshot = await getDocs(collection(db, "courses"));
+    try {
+      const snapshot = await getDocs(collection(db, "courses"));
 
-    if (snapshot.empty) {
-      courseList.innerHTML = "<p>No courses found.</p>";
-      return;
-    }
+      if (snapshot.empty) {
+        courseList.innerHTML = "<p>No courses found.</p>";
+        return;
+      }
 
-    snapshot.forEach(docSnap => {
-      const course = docSnap.data();
-      const courseId = docSnap.id;
+      snapshot.forEach(docSnap => {
+        const course = docSnap.data();
+        const courseId = docSnap.id;
 
-      const card = document.createElement("div");
-      card.className = "col-md-6 mb-4";
-      card.innerHTML = `
-        <div class="card h-100 p-3">
-          <div class="card-body">
-            <h5 class="card-title">${course.title}</h5>
-            <p><strong>Start:</strong> ${course.startDate || 'N/A'}</p>
-            <p><strong>End:</strong> ${course.endDate || 'N/A'}</p>
-            <p><strong>Subjects:</strong> ${course.subjects?.join(', ') || 'N/A'}</p>
-            <p><strong>Weeks:</strong> ${course.weeks || 1}</p>
-            <button class="btn btn-warning btn-sm allow-btn" data-course-id="${courseId}" data-course-title="${course.title}">Allow Students</button>
+        const card = document.createElement("div");
+        card.className = "col-md-6 mb-4";
+        card.innerHTML = `
+          <div class="card h-100 p-3">
+            <div class="card-body">
+              <h5 class="card-title">${course.title}</h5>
+              <p><strong>Start:</strong> ${course.startDate || 'N/A'}</p>
+              <p><strong>End:</strong> ${course.endDate || 'N/A'}</p>
+              <p><strong>Subjects:</strong> ${course.subjects?.join(', ') || 'N/A'}</p>
+              <p><strong>Weeks:</strong> ${course.weeks || 1}</p>
+              <button class="btn btn-warning btn-sm allow-btn" data-course-id="${courseId}" data-course-title="${course.title}">Allow Students</button>
+            </div>
           </div>
-        </div>
-      `;
-      courseList.appendChild(card);
-    });
+        `;
+        courseList.appendChild(card);
+      });
 
-    // Attach click event listeners to all allow buttons
-    document.querySelectorAll(".allow-btn").forEach(btn => {
-      btn.addEventListener("click", openAllowModal);
-    });
+      // Attach click event listeners to all allow buttons
+      document.querySelectorAll(".allow-btn").forEach(btn => {
+        btn.addEventListener("click", openAllowModal);
+      });
+    } catch (error) {
+      console.error("Error loading courses:", error);
+      showStatusMessage("Error loading courses.", "danger");
+    }
   }
 
   // Open modal and show students with checkboxes, load existing allowed students for course
@@ -194,29 +301,34 @@
     }
 
     // Load existing allowed students for this course (stored in course doc, field: allowedStudents)
-    const courseDocRef = doc(db, "courses", currentCourseId);
-    const courseDocSnap = await getDoc(courseDocRef);
-    let allowedStudents = [];
-    if (courseDocSnap.exists()) {
-      allowedStudents = courseDocSnap.data().allowedStudents || [];
+    try {
+      const courseDocRef = doc(db, "courses", currentCourseId);
+      const courseDocSnap = await getDoc(courseDocRef);
+      let allowedStudents = [];
+      if (courseDocSnap.exists()) {
+        allowedStudents = courseDocSnap.data().allowedStudents || [];
+      }
+
+      studentCheckboxes.innerHTML = "";
+      allStudents.forEach(student => {
+        const isChecked = allowedStudents.includes(student.id);
+        const studentName = student.name || student.enrollment || student.id;
+        const checkboxId = `student_${student.id}`;
+        const checkboxHTML = `
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="${student.id}" id="${checkboxId}" ${isChecked ? "checked" : ""}>
+            <label class="form-check-label" for="${checkboxId}">${studentName}</label>
+          </div>
+        `;
+        studentCheckboxes.insertAdjacentHTML("beforeend", checkboxHTML);
+      });
+
+      modal.style.display = "block";
+      modalBackdrop.style.display = "block";
+    } catch (error) {
+      console.error("Error preparing student access modal:", error);
+      showStatusMessage("Error preparing student access modal.", "danger");
     }
-
-    studentCheckboxes.innerHTML = "";
-    allStudents.forEach(student => {
-      const isChecked = allowedStudents.includes(student.id);
-      const studentName = student.name || student.enrollment || student.id;
-      const checkboxId = `student_${student.id}`;
-      const checkboxHTML = `
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="${student.id}" id="${checkboxId}" ${isChecked ? "checked" : ""}>
-          <label class="form-check-label" for="${checkboxId}">${studentName}</label>
-        </div>
-      `;
-      studentCheckboxes.insertAdjacentHTML("beforeend", checkboxHTML);
-    });
-
-    modal.style.display = "block";
-    modalBackdrop.style.display = "block";
   }
 
   // Save allowed students for the current course
@@ -230,11 +342,11 @@
       const courseDocRef = doc(db, "courses", currentCourseId);
       await setDoc(courseDocRef, { allowedStudents: selectedStudentIds }, { merge: true });
 
-      alert(`Allowed students saved for course "${currentCourseTitle}".`);
+      showStatusMessage(`Allowed students saved for course "${currentCourseTitle}".`, "success");
       closeModal();
     } catch (error) {
       console.error("Error saving allowed students:", error);
-      alert("Failed to save allowed students.");
+      showStatusMessage("Failed to save allowed students.", "danger");
     }
   }
 
@@ -248,8 +360,14 @@
   cancelModalBtn.addEventListener("click", closeModal);
   modalBackdrop.addEventListener("click", closeModal);
 
-  function logout() {
+  window.logout = function () {
     window.location.href = "index.html";
+  }
+
+  // Sidebar toggle function for mobile
+  window.toggleSidebar = function () {
+    const sidebar = document.getElementById('sidebar');
+    sidebar.classList.toggle('show');
   }
 
   loadCourses();
