--- a/Admin/create_assignment_History.html
+++ b/Admin/create_assignment_History.html
@@ -6,15 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body { background-color: #f4f6f9; }
-    .sidebar {
-      height: 100vh;
+    body { 
+      background-color: #f4f6f9; 
+      margin: 0;
+      font-family: 'Inter', sans-serif; /* Using Inter font */
+    }
+
+    /* Toggle button styling */
+    .toggle-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1100;
       background-color: #2A5C88;
       color: white;
-      padding: 1rem;
-      position: fixed;
-      width: 250px;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      cursor: pointer;
+      display: none; /* hidden by default */
     }
+
+    /* Show toggle button only on small screens */
+    @media (max-width: 767.98px) {
+      .toggle-btn {
+        display: block;
+      }
+      .sidebar.show + .main-content {
+        /* Adjust main content when sidebar is shown on small screens */
+        transform: translateX(250px);
+        transition: transform 0.3s ease-in-out;
+      }
+    }
+
+    /* Sidebar styles for large screens */
+    @media (min-width: 768px) {
+      .sidebar {
+        height: 100vh;
+        background-color: #2A5C88;
+        color: white;
+        padding: 1rem;
+        position: fixed;
+        width: 250px;
+        top: 0;
+        left: 0;
+        overflow-y: auto;
+      }
+      .main-content {
+        margin-left: 270px;
+        padding: 2rem;
+      }
+    }
+
+    /* Sidebar styles for small screens - hidden by default */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px;
+        background-color: #2A5C88;
+        padding: 1rem;
+        color: white;
+        overflow-y: auto;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 1099;
+      }
+      .sidebar.show {
+        transform: translateX(0);
+      }
+      .main-content {
+        margin-left: 0;
+        padding: 2rem 1rem;
+      }
+    }
+
     .sidebar a {
       display: block;
       padding: 0.75rem 1rem;
@@ -27,10 +96,7 @@
     .sidebar a.active {
       background-color: #1f4568;
     }
-    .main-content {
-      margin-left: 270px;
-      padding: 2rem;
-    }
+
     .card {
       margin-bottom: 1rem;
       border-radius: 10px;
@@ -40,15 +106,30 @@
       margin-left: 2rem;
       margin-top: 0.5rem;
     }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
+    }
   </style>
 </head>
 <body>
-  <div class="sidebar">
+  <!-- Toggle button -->
+  <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
+  <div class="sidebar" id="sidebar">
     <h4 class="mb-4">Admin Panel</h4>
     <a href="create_assignment.html">Create Assignment</a>
-     <a href="create_Code_Assignment.html">create code Assignment </a>
+    <a href="create_Code_Assignment.html">create code Assignment</a>
     <a class="active" href="create_assignment_History.html">Assignment History</a>
-    <a href="admin-dashboard.html">← Back</a>
+    <a href="admin_dashboard.html">← Back</a>
   </div>
 
   <div class="main-content">
@@ -56,128 +137,160 @@
     <div id="courseContainer"></div>
   </div>
 
+  <!-- Custom Status Message -->
+  <div id="statusMessage" class="alert"></div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
-    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-    authDomain: "clms-dbfe1.firebaseapp.com",
-    projectId: "clms-dbfe1",
-    storageBucket: "clms-dbfe1.firebasestorage.app",
-    messagingSenderId: "1025852714357",
-    appId: "1:1025852714357:web:282d74003f389767ad773c"
-  };
+      apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
+      authDomain: "clms-dbfe1.firebaseapp.com",
+      projectId: "clms-dbfe1",
+      storageBucket: "clms-dbfe1.firebasestorage.app",
+      messagingSenderId: "1025852714357",
+      appId: "1:1025852714357:web:282d74003f389767ad773c"
+    };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
     const courseContainer = document.getElementById("courseContainer");
+    const statusMessageDiv = document.getElementById("statusMessage");
+
+    // Function to show custom status messages
+    function showStatusMessage(message, type = 'info') {
+      statusMessageDiv.textContent = message;
+      statusMessageDiv.className = `alert mt-3 alert-${type}`;
+      statusMessageDiv.style.display = 'block';
+      setTimeout(() => {
+        statusMessageDiv.style.display = 'none';
+      }, 3000); // Hide after 3 seconds
+    }
 
     async function loadAssignments() {
-  const snapshot = await getDocs(collection(db, "courses"));
-  const snapshot_1 = await getDocs(collection(db, "assignments"));
-  const assignmentsByCourse = {};
+      try {
+        const snapshot = await getDocs(collection(db, "courses"));
+        const snapshot_1 = await getDocs(collection(db, "assignments"));
+        const assignmentsByCourse = {};
 
-  // Prepare assignments grouped by courseId
-  snapshot_1.forEach(doc => {
-    const data = doc.data();
-    const courseId = data.courseId;
-    const week = data.week || 1;
-    const subject = data.subject || "Unknown Subject";
+        snapshot_1.forEach(doc => {
+          const data = doc.data();
+          const courseId = data.courseId;
+          const week = data.week || "Week Unknown"; // Handle cases where week might be missing
+          const subject = data.subject || "Unknown Subject";
 
-    if (!assignmentsByCourse[courseId]) {
-      assignmentsByCourse[courseId] = { weeks: {} };
-    }
+          if (!assignmentsByCourse[courseId]) {
+            assignmentsByCourse[courseId] = { weeks: {} };
+          }
 
-    if (!assignmentsByCourse[courseId].weeks[week]) {
-      assignmentsByCourse[courseId].weeks[week] = {};
-    }
+          if (!assignmentsByCourse[courseId].weeks[week]) {
+            assignmentsByCourse[courseId].weeks[week] = {};
+          }
 
-    assignmentsByCourse[courseId].weeks[week][subject] = {
-      ...data,
-      docId: doc.id
-    };
-  });
+          assignmentsByCourse[courseId].weeks[week][subject] = {
+            ...data,
+            docId: doc.id
+          };
+        });
 
-  // Now build course cards using data from `courses` collection
-  snapshot.forEach(doc => {
-    const courseId = doc.id; // ✅ Use the document ID as the courseId
-    const data = doc.data();
+        if (snapshot.empty && Object.keys(assignmentsByCourse).length === 0) {
+          courseContainer.innerHTML = "<p>No assignments or courses found.</p>";
+          return;
+        }
 
-    const course = {
-      courseName: data.title || "Untitled Course",
-      startDate: data.startDate || "N/A",
-      endDate: data.endDate || "N/A",
-      weeks: assignmentsByCourse[courseId]?.weeks || {}
-    };
+        snapshot.forEach(doc => {
+          const courseId = doc.id;
+          const data = doc.data();
 
-    // Build UI as before
-    const courseCard = document.createElement("div");
-    courseCard.className = "card p-3";
-    courseCard.innerHTML = `
-      <h5>${course.courseName}</h5>
-      <p><strong>Start:</strong> ${course.startDate} | <strong>End:</strong> ${course.endDate}</p>
-      <button class="btn btn-primary btn-sm">Enter</button>
-      <div class="nested-section" style="display: none;"></div>
-    `;
+          const course = {
+            courseName: data.title || "Untitled Course",
+            startDate: data.startDate || "N/A",
+            endDate: data.endDate || "N/A",
+            weeks: assignmentsByCourse[courseId]?.weeks || {}
+          };
 
-    const toggleBtn = courseCard.querySelector("button");
-    const nestedSection = courseCard.querySelector(".nested-section");
-
-    toggleBtn.addEventListener("click", () => {
-      nestedSection.style.display = nestedSection.style.display === "none" ? "block" : "none";
-
-      if (nestedSection.innerHTML === "") {
-        Object.keys(course.weeks).forEach(week => {
-          const weekCard = document.createElement("div");
-          weekCard.className = "card p-2";
-          weekCard.innerHTML = `
-            <h6>Week ${week}</h6>
-            <button class="btn btn-secondary btn-sm">Enter</button>
+          const courseCard = document.createElement("div");
+          courseCard.className = "card p-3";
+          courseCard.innerHTML = `
+            <h5>${course.courseName}</h5>
+            <p><strong>Start:</strong> ${course.startDate} | <strong>End:</strong> ${course.endDate}</p>
+            <button class="btn btn-primary btn-sm">Enter</button>
             <div class="nested-section" style="display: none;"></div>
           `;
 
-          const weekToggle = weekCard.querySelector("button");
-          const weekNested = weekCard.querySelector(".nested-section");
+          const toggleBtn = courseCard.querySelector("button");
+          const nestedSection = courseCard.querySelector(".nested-section");
 
-          weekToggle.addEventListener("click", () => {
-            weekNested.style.display = weekNested.style.display === "none" ? "block" : "none";
+          toggleBtn.addEventListener("click", () => {
+            nestedSection.style.display = nestedSection.style.display === "none" ? "block" : "none";
 
-            if (weekNested.innerHTML === "") {
-              Object.entries(course.weeks[week]).forEach(([subjectName, data]) => {
-                const types = [];
-                if (data.mcq?.length) types.push("MCQ");
-                if (data.fillBlanks?.length) types.push("Fill");
-                if (data.trueFalse?.length) types.push("True/False");
-                if (data.codeQuestions?.length) types.push("Code");
+            if (nestedSection.innerHTML === "") {
+              const sortedWeeks = Object.keys(course.weeks).sort((a, b) => {
+                const weekNumA = parseInt(a.replace('Week ', ''), 10);
+                const weekNumB = parseInt(b.replace('Week ', ''), 10);
+                return weekNumA - weekNumB;
+              });
 
-                const subjectCard = document.createElement("div");
-                subjectCard.className = "card p-2";
-                subjectCard.innerHTML = `
-                  <h6>${subjectName}</h6>
-                  <p><strong>Types:</strong> ${types.join(", ") || "None"}</p>
-                  <button class="btn btn-outline-primary btn-sm" onclick="editAssignment('${data.docId}')">Edit</button>
+              sortedWeeks.forEach(week => {
+                const weekCard = document.createElement("div");
+                weekCard.className = "card p-2";
+                weekCard.innerHTML = `
+                  <h6>${week}</h6>
+                  <button class="btn btn-secondary btn-sm">Enter</button>
+                  <div class="nested-section" style="display: none;"></div>
                 `;
-                weekNested.appendChild(subjectCard);
+
+                const weekToggle = weekCard.querySelector("button");
+                const weekNested = weekCard.querySelector(".nested-section");
+
+                weekToggle.addEventListener("click", () => {
+                  weekNested.style.display = weekNested.style.display === "none" ? "block" : "none";
+
+                  if (weekNested.innerHTML === "") {
+                    Object.entries(course.weeks[week]).forEach(([subjectName, data]) => {
+                      const types = [];
+                      if (data.mcq?.length) types.push("MCQ");
+                      if (data.fillBlanks?.length) types.push("Fill");
+                      if (data.trueFalse?.length) types.push("True/False");
+                      if (data.codeQuestions?.length) types.push("Code");
+
+                      const subjectCard = document.createElement("div");
+                      subjectCard.className = "card p-2";
+                      subjectCard.innerHTML = `
+                        <h6>${subjectName}</h6>
+                        <p><strong>Types:</strong> ${types.join(", ") || "None"}</p>
+                        <button class="btn btn-outline-primary btn-sm" onclick="editAssignment('${data.docId}')">Edit</button>
+                      `;
+                      weekNested.appendChild(subjectCard);
+                    });
+                  }
+                });
+
+                nestedSection.appendChild(weekCard);
               });
             }
           });
 
-          nestedSection.appendChild(weekCard);
+          courseContainer.appendChild(courseCard);
         });
+      } catch (error) {
+        console.error("Error loading assignments:", error);
+        showStatusMessage("Error loading assignments: " + error.message, "danger");
       }
-    });
-
-    courseContainer.appendChild(courseCard);
-  });
-}
-
+    }
 
     // Global function so "onclick" works
     window.editAssignment = function (docId) {
       window.location.href = `create_assignment.html?editId=${docId}`;
     };
+
+    // Sidebar toggle function for mobile
+    window.toggleSidebar = function () {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('show');
+    }
 
     loadAssignments();
   </script>
