--- a/Admin/upload_material.html
+++ b/Admin/upload_material.html
@@ -6,18 +6,112 @@
   <title>Upload Week-wise PDF Materials</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background: #f4f6f9; }
-    .container {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      margin-top: 30px;
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif; /* Using Inter font */
+    }
+
+    .toggle-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1050;
+      background-color: #2A5C88; /* Changed to match other sidebars */
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 4px;
+      cursor: pointer;
+      display: none; /* show only on small screens */
+    }
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 220px;
+      background-color: #2a5c88;
+      padding: 1.5rem 1rem;
+      color: white;
+      overflow-y: auto;
+      transition: transform 0.3s ease;
+    }
+
+    .sidebar a {
+      display: block;
+      color: white;
+      text-decoration: none;
+      margin-bottom: 12px;
+      padding: 8px 10px;
+      border-radius: 5px;
+    }
+
+    .sidebar a.active,
+    .sidebar a:hover {
+      background-color: #1f4568;
+      color: #fff;
+    }
+
+    /* Hide sidebar on small screens by default */
+    @media (max-width: 991.98px) {
+      .sidebar {
+        transform: translateX(-250px);
+        z-index: 1040;
+      }
+      .sidebar.show {
+        transform: translateX(0);
+      }
+      .toggle-btn {
+        display: block;
+      }
+      .main-content { /* Renamed from .container for consistency */
+        margin-left: 0 !important;
+        padding: 1rem;
+      }
+      .sidebar.show + .main-content {
+        /* Adjust main content when sidebar is shown on small screens */
+        transform: translateX(250px);
+        transition: transform 0.3s ease-in-out;
+      }
+    }
+
+    /* On larger screens, keep sidebar visible and push container */
+    @media (min-width: 992px) {
+      .main-content { /* Renamed from .container for consistency */
+        margin-left: 240px;
+        padding: 2rem; /* Added padding for larger screens */
+      }
+    }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <!-- Your toggle button -->
+  <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <h4 class="mb-4">Admin Panel</h4>
+    <a href="admin_dashboard.html">Dashboard</a>
+    <a href="admin_courses.html">Courses</a>
+    <a href="create_assignment.html">Assignment</a>
+    <a href="upload_material.html" class="active">Upload Material</a>
+    <a href="assignments.html">Students</a>
+    <a href="../index.html" onclick="logout()">Logout</a>
+  </div>
+  <div class="main-content"> <!-- Renamed from .container for consistency -->
     <h3>📤 Upload Multiple PDFs for a Week</h3>
     <form id="uploadForm">
       <div class="mb-3">
@@ -46,6 +140,9 @@
     <div id="status" class="mt-3"></div>
   </div>
 
+  <!-- Custom Status Message -->
+  <div id="statusMessage" class="alert"></div>
+
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
   import { getFirestore, collection, getDocs, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
@@ -72,7 +169,18 @@
   const courseSelect = document.getElementById("courseSelect");
   const weekSelect = document.getElementById("weekSelect");
   const subjectSelect = document.getElementById("subjectSelect");
-  const statusDiv = document.getElementById("status");
+  const statusDiv = document.getElementById("status"); // This is for form-specific messages
+  const globalStatusMessageDiv = document.getElementById("statusMessage"); // For general messages
+
+  // Function to show custom status messages
+  function showStatusMessage(message, type = 'info', targetDiv = globalStatusMessageDiv) {
+    targetDiv.textContent = message;
+    targetDiv.className = `alert mt-3 alert-${type}`;
+    targetDiv.style.display = 'block';
+    setTimeout(() => {
+      targetDiv.style.display = 'none';
+    }, 3000); // Hide after 3 seconds
+  }
 
   async function loadCourses() {
     try {
@@ -87,7 +195,7 @@
       });
     } catch (err) {
       console.error("Error loading courses:", err);
-      statusDiv.innerHTML = `<div class="alert alert-danger">Error loading courses: ${err.message}</div>`;
+      showStatusMessage(`Error loading courses: ${err.message}`, 'danger');
     }
   }
 
@@ -101,7 +209,10 @@
 
     try {
       const courseDoc = await getDoc(doc(db, "courses", courseId));
-      if (!courseDoc.exists()) return;
+      if (!courseDoc.exists()) {
+        showStatusMessage("Selected course not found.", 'warning');
+        return;
+      }
 
       const data = courseDoc.data();
 
@@ -113,6 +224,8 @@
           opt.textContent = `Week ${i}`;
           weekSelect.appendChild(opt);
         }
+      } else {
+        showStatusMessage("Number of weeks not defined for this course.", 'warning');
       }
 
       subjectSelect.innerHTML = `<option value="">-- Select Subject --</option>`;
@@ -123,10 +236,12 @@
           opt.textContent = subject;
           subjectSelect.appendChild(opt);
         });
+      } else {
+        showStatusMessage("Subjects not defined for this course.", 'warning');
       }
     } catch (error) {
       console.error("Error loading course data:", error);
-      statusDiv.innerHTML = `<div class="alert alert-danger">Error loading course data: ${error.message}</div>`;
+      showStatusMessage(`Error loading course data: ${error.message}`, 'danger');
     }
   });
 
@@ -139,16 +254,16 @@
     const files = document.getElementById("pdfFiles").files;
 
     if (!courseId || !week || !subject) {
-      alert("Please select course, week, and subject.");
+      showStatusMessage("Please select course, week, and subject.", 'warning', statusDiv);
       return;
     }
 
     if (!files.length) {
-      alert("Please select at least one PDF file.");
+      showStatusMessage("Please select at least one PDF file.", 'warning', statusDiv);
       return;
     }
 
-    statusDiv.innerHTML = `<div class="alert alert-info">Uploading ${files.length} file(s)...</div>`;
+    showStatusMessage(`Uploading ${files.length} file(s)...`, 'info', statusDiv);
     console.log(`Uploading to: materials/${courseId}/week${week}/${subject}/`);
 
     try {
@@ -186,14 +301,21 @@
 
       await setDoc(weekRef, weekData, { merge: true });
 
-      statusDiv.innerHTML = `<div class="alert alert-success">✅ All PDFs uploaded successfully!</div>`;
+      showStatusMessage("✅ All PDFs uploaded successfully!", "success", statusDiv);
     } catch (error) {
       console.error("Upload error:", error);
-      statusDiv.innerHTML = `<div class="alert alert-danger">❌ Error: ${error.message}</div>`;
+      showStatusMessage(`❌ Error: ${error.message}`, "danger", statusDiv);
     }
   });
 
   loadCourses();
+  window.toggleSidebar = function () { // Make globally accessible
+    document.getElementById('sidebar').classList.toggle('show');
+  }
+
+  window.logout = function () {
+    window.location.href = "../index.html"; // Adjust as necessary for your logout flow
+  }
 </script>
 
 
