--- a/Student/course_detail.html
+++ b/Student/course_detail.html
@@ -1,24 +1,87 @@
-<!-- course_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Course Details</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       background-color: #f4f6f9;
+      font-family: 'Segoe UI', sans-serif; /* Preserving your font choice */
+      margin: 0; /* Ensure no default body margin */
     }
-    .sidebar {
-      height: 100vh;
-      background-color: #2A5C88;
-      color: white;
-      padding: 1rem;
+
+    /* Hide toggle button by default (for larger screens) */
+    .toggle-btn {
+      display: none;
     }
-    .sidebar h4 {
-      margin-bottom: 1rem;
+
+    /* Sidebar styles for large screens (md and up) */
+    @media (min-width: 768px) {
+      .sidebar {
+        min-height: 100vh;
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+        position: fixed; /* Fixed sidebar on desktop */
+        top: 0;
+        left: 0;
+        width: 250px; /* Define a fixed width for desktop sidebar */
+        overflow-y: auto;
+      }
+      /* Adjust main content to make space for the fixed sidebar */
+      .main-content-wrapper {
+        margin-left: 250px; /* Offset for the fixed sidebar */
+        padding: 2rem; /* Add padding for content */
+      }
     }
+
+    /* Sidebar styles for small screens (below md) */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        width: 250px; /* Define width for mobile sidebar */
+        z-index: 1000;
+        transform: translateX(-100%); /* Hidden by default */
+        transition: transform 0.3s ease-in-out;
+        height: 100vh; /* Full height on mobile */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+      }
+
+      .sidebar.show {
+        transform: translateX(0); /* Show when 'show' class is added */
+      }
+
+      /* Toggle button visibility and styling for mobile */
+      .toggle-btn {
+        display: block !important; /* Ensure it's visible on mobile */
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1001; /* Above sidebar */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        font-size: 1.2rem;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      /* Adjust main content when sidebar is shown on small screens */
+      .main-content-wrapper {
+        padding: 2rem 1rem; /* Default padding for mobile, adjusted for small screens */
+        transition: transform 0.3s ease-in-out;
+      }
+      .main-content-wrapper.shifted {
+        transform: translateX(250px); /* Shift content when sidebar is open */
+      }
+    }
+
+    /* Common sidebar link styles */
     .sidebar a {
       display: block;
       padding: 0.5rem 1rem;
@@ -28,12 +91,11 @@
       border-radius: 8px;
       background-color: rgba(255, 255, 255, 0.1);
     }
-    .sidebar a:hover {
-      background-color: rgba(255, 255, 255, 0.2);
+    .sidebar a:hover, .sidebar a.active {
+      background-color: #1f4568; /* Your specified hover/active color */
     }
-    .main-content {
-      padding: 2rem;
-    }
+
+    /* Main content specific styles */
     .week-card {
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
@@ -41,28 +103,48 @@
       margin-bottom: 1rem;
       background-color: white;
     }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
+    }
   </style>
 </head>
 <body>
+
+<!-- Toggle button for mobile -->
+<button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
 <div class="container-fluid">
   <div class="row">
     <!-- Sidebar -->
-    <div class="col-md-3 sidebar">
-      <h4 id="courseName">Loading...</h4>
+    <div class="sidebar" id="sidebar">
+      <h4 id="courseName" class="mb-4">Loading...</h4>
       <div id="weeksMenu"></div>
       <a href="our_course.html" style="background-color:#1f4568;">Back to Courses</a>
     </div>
 
     <!-- Main Content -->
-    <div class="col-md-9 main-content">
-      <h3>Course Weeks</h3>
+    <div class="col-12 col-md-9 main-content-wrapper">
+      <h3 class="mb-4">Course Weeks</h3>
       <div id="weekContent">
-        <p>Select a week from the left menu to see details.</p>
+        <p>Select a week from the menu to see details.</p>
       </div>
     </div>
   </div>
 </div>
 
+<!-- Custom Status Message -->
+<div id="statusMessage" class="alert"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
   import {
@@ -86,46 +168,72 @@
   // Get courseId from URL
   const params = new URLSearchParams(window.location.search);
   const courseId = params.get("courseId");
+  const statusMessageDiv = document.getElementById("statusMessage");
+
+  // Function to display custom status messages
+  function showStatusMessage(message, type = 'info') {
+    statusMessageDiv.textContent = message;
+    statusMessageDiv.className = `alert mt-3 alert-${type}`;
+    statusMessageDiv.style.display = 'block';
+    setTimeout(() => {
+      statusMessageDiv.style.display = 'none';
+    }, 3000); // Hide after 3 seconds
+  }
 
   if (!courseId) {
-    alert("Invalid course ID.");
+    showStatusMessage("Invalid course ID.", "danger");
   }
 
   let courseSubjects = []; // store subjects from Firestore
 
-async function loadCourseDetails() {
-    const courseRef = doc(db, "courses", courseId);
-    const courseSnap = await getDoc(courseRef);
+  async function loadCourseDetails() {
+    try {
+      const courseRef = doc(db, "courses", courseId);
+      const courseSnap = await getDoc(courseRef);
 
-    if (!courseSnap.exists()) {
-        alert("Course not found!");
-        return;
+      if (!courseSnap.exists()) {
+          showStatusMessage("Course not found!", "danger");
+          return;
+      }
+
+      const course = courseSnap.data();
+      document.getElementById("courseName").innerText = course.title;
+
+      // store subjects globally
+      courseSubjects = course.subjects || [];
+
+      const weeksMenu = document.getElementById("weeksMenu");
+      weeksMenu.innerHTML = "";
+
+      if (!course.weeks || course.weeks < 1) {
+          weeksMenu.innerHTML = "<p class='text-white-50 p-2'>No weeks available.</p>"; /* Adjusted for visibility */
+          return;
+      }
+
+      for (let i = 1; i <= course.weeks; i++) {
+          const weekLink = document.createElement("a");
+          weekLink.href = "#";
+          weekLink.innerText = `Week ${i}`;
+          weekLink.className = "text-white"; /* Add class for consistent styling */
+          weekLink.addEventListener("click", () => {
+              loadWeekContent(i);
+              // Close sidebar on click for mobile
+              const sidebar = document.getElementById("sidebar");
+              const mainContent = document.querySelector(".main-content-wrapper");
+              if (sidebar.classList.contains('show')) {
+                sidebar.classList.remove('show');
+                mainContent.classList.remove('shifted');
+              }
+          });
+          weeksMenu.appendChild(weekLink);
+      }
+    } catch (error) {
+      console.error("Error loading course details:", error);
+      showStatusMessage("Error loading course details: " + error.message, "danger");
     }
+  }
 
-    const course = courseSnap.data();
-    document.getElementById("courseName").innerText = course.title;
-
-    // store subjects globally
-    courseSubjects = course.subjects || [];
-
-    const weeksMenu = document.getElementById("weeksMenu");
-    weeksMenu.innerHTML = "";
-
-    if (!course.weeks || course.weeks < 1) {
-        weeksMenu.innerHTML = "<p>No weeks available.</p>";
-        return;
-    }
-
-    for (let i = 1; i <= course.weeks; i++) {
-        const weekLink = document.createElement("a");
-        weekLink.href = "#";
-        weekLink.innerText = `Week ${i}`;
-        weekLink.addEventListener("click", () => loadWeekContent(i));
-        weeksMenu.appendChild(weekLink);
-    }
-}
-
-function loadWeekContent(weekNumber) {
+  function loadWeekContent(weekNumber) {
     const contentDiv = document.getElementById("weekContent");
 
     if (!courseSubjects.length) {
@@ -133,17 +241,17 @@ function loadWeekContent(weekNumber) {
         return;
     }
 
-    let cardsHTML = `<h4>Week ${weekNumber}</h4><div class="row">`;
+    let cardsHTML = `<h4 class="mb-3">Week ${weekNumber}</h4><div class="row g-4">`; /* Add g-4 for consistent spacing */
 
     courseSubjects.forEach(subject => {
         cardsHTML += `
-            <div class="col-md-4">
-                <div class="card mb-3 shadow-sm">
+            <div class="col-sm-6 col-lg-4"> /* Added responsive column classes */
+                <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">${subject}</h5>
                         <p class="card-text">Week ${weekNumber} - ${subject}</p>
-                        <a href="week_detail.html?courseId=${courseId}&week=${weekNumber}&subject=${encodeURIComponent(subject)}" 
-                           class="btn btn-primary">Enter</a>
+                        <a href="week_detail.html?courseId=${courseId}&week=${weekNumber}&subject=${encodeURIComponent(subject)}"
+                           class="btn btn-primary mt-2">Enter</a> /* Added mt-2 for button spacing */
                     </div>
                 </div>
             </div>
@@ -152,9 +260,19 @@ function loadWeekContent(weekNumber) {
 
     cardsHTML += `</div>`;
     contentDiv.innerHTML = cardsHTML;
-}
+  }
 
   loadCourseDetails();
+
+  // Sidebar toggle function for mobile
+  window.toggleSidebar = function () {
+    const sidebar = document.getElementById("sidebar");
+    const mainContent = document.querySelector(".main-content-wrapper");
+    if (sidebar && mainContent) {
+      sidebar.classList.toggle('show');
+      mainContent.classList.toggle('shifted');
+    }
+  }
 </script>
 </body>
 </html>
