--- a/Student/our_course.html
+++ b/Student/our_course.html
@@ -2,19 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Course History</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       background-color: #f4f6f9;
+      font-family: 'Segoe UI', sans-serif; /* Preserving your font choice */
+      margin: 0; /* Ensure no default body margin */
     }
-    .sidebar {
-      height: 100vh;
-      background-color: #2A5C88;
-      color: white;
-      padding: 1rem;
+
+    /* Hide toggle button by default (for larger screens) */
+    .toggle-btn {
+      display: none;
     }
+
+    /* Sidebar styles for large screens (md and up) */
+    @media (min-width: 768px) {
+      .sidebar {
+        min-height: 100vh;
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+        position: fixed; /* Fixed sidebar on desktop */
+        top: 0;
+        left: 0;
+        width: 250px; /* Define a fixed width for desktop sidebar */
+        overflow-y: auto;
+      }
+      /* Adjust main content to make space for the fixed sidebar */
+      .main-content-wrapper {
+        margin-left: 250px; /* Offset for the fixed sidebar */
+        padding: 2rem; /* Add padding for content */
+      }
+    }
+
+    /* Sidebar styles for small screens (below md) */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        width: 250px; /* Define width for mobile sidebar */
+        z-index: 1000;
+        transform: translateX(-100%); /* Hidden by default */
+        transition: transform 0.3s ease-in-out;
+        height: 100vh; /* Full height on mobile */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+      }
+
+      .sidebar.show {
+        transform: translateX(0); /* Show when 'show' class is added */
+      }
+
+      /* Toggle button visibility and styling for mobile */
+      .toggle-btn {
+        display: block !important; /* Ensure it's visible on mobile */
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1001; /* Above sidebar */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        font-size: 1.2rem;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      /* Adjust main content when sidebar is shown on small screens */
+      .main-content-wrapper {
+        padding: 2rem 1rem; /* Default padding for mobile, adjusted for small screens */
+        transition: transform 0.3s ease-in-out;
+      }
+      .main-content-wrapper.shifted {
+        transform: translateX(250px); /* Shift content when sidebar is open */
+      }
+    }
+
+    /* Common sidebar link styles */
     .sidebar a {
       display: block;
       padding: 0.75rem 1rem;
@@ -24,11 +91,10 @@
       border-radius: 8px;
     }
     .sidebar a:hover, .sidebar a.active {
-      background-color: #1f4568;
+      background-color: #1f4568; /* Your specified hover/active color */
     }
-    .main-content {
-      padding: 2rem;
-    }
+
+    /* Main content specific styles */
     .course-card {
       border-radius: 1rem;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
@@ -36,32 +102,50 @@
       margin-bottom: 1rem;
       background-color: white;
     }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
+    }
   </style>
 </head>
 <body>
+
+<!-- Toggle button for mobile -->
+<button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3 sidebar">
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
       <h4 class="mb-4">Student Panel</h4>
       <a href="student_dashboard.html">Dashboard</a>
       <a href="our_course.html" class="active">Course History</a>
       <a href="../index.html" onclick="logout()">Logout</a>
     </div>
 
-    <div class="col-md-9 main-content">
+    <!-- Main Content -->
+    <div class="col-12 col-md-9 main-content-wrapper">
       <h3 class="mb-4">Enrolled Course History</h3>
       <div id="enrolledCourses"></div>
     </div>
   </div>
 </div>
 
+<!-- Custom Status Message -->
+<div id="statusMessage" class="alert"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import {
-    getFirestore,
-    collection,
-    getDocs
-  } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
@@ -76,49 +160,65 @@
   const db = getFirestore(app);
 
   const enrolledCoursesDiv = document.getElementById("enrolledCourses");
+  const statusMessageDiv = document.getElementById("statusMessage");
+
+  // Function to display custom status messages
+  function showStatusMessage(message, type = 'info') {
+    statusMessageDiv.textContent = message;
+    statusMessageDiv.className = `alert mt-3 alert-${type}`;
+    statusMessageDiv.style.display = 'block';
+    setTimeout(() => {
+      statusMessageDiv.style.display = 'none';
+    }, 3000); // Hide after 3 seconds
+  }
 
   async function loadEnrolledCourses() {
-    // ✅ Get student data from localStorage
     const studentData = JSON.parse(localStorage.getItem("student"));
-    
+
     if (!studentData || !studentData.enrollment) {
-      alert("Unauthorized access. Please login again.");
+      showStatusMessage("Unauthorized access. Please login again.", "danger");
       window.location.href = "../index.html";
       return;
     }
 
     const enrollmentNumber = studentData.enrollment;
 
-    const enrollmentsSnapshot = await getDocs(collection(db, "enrollments"));
-    const courseSnapshot = await getDocs(collection(db, "courses"));
+    try {
+      const enrollmentsSnapshot = await getDocs(collection(db, "enrollments"));
+      const courseSnapshot = await getDocs(collection(db, "courses"));
 
-    const enrolled = [];
+      const enrolled = [];
 
-    enrollmentsSnapshot.forEach(enrollDoc => {
-      const data = enrollDoc.data();
-      if (data.enrollment === enrollmentNumber) {
-        enrolled.push(data);
+      enrollmentsSnapshot.forEach(enrollDoc => {
+        const data = enrollDoc.data();
+        if (data.enrollment === enrollmentNumber) {
+          enrolled.push(data);
+        }
+      });
+
+      if (enrolled.length === 0) {
+        enrolledCoursesDiv.innerHTML = "<p>No courses enrolled.</p>";
+        return;
       }
-    });
 
-    if (enrolled.length === 0) {
-      enrolledCoursesDiv.innerHTML = "<p>No courses enrolled.</p>";
-      return;
+      enrolledCoursesDiv.innerHTML = ""; // Clear existing content
+      enrolled.forEach(data => {
+        const course = Array.from(courseSnapshot.docs).find(doc => doc.id === data.courseId);
+        if (!course) return;
+        const courseData = course.data();
+        const courseCard = document.createElement("div");
+        courseCard.className = "course-card";
+        courseCard.innerHTML = `
+          <h5>${courseData.title}</h5>
+          <p>${courseData.startDate} to ${courseData.endDate}</p>
+          <button class="btn btn-primary" onclick="goToCourse('${course.id}')">Go to Course</button>
+        `;
+        enrolledCoursesDiv.appendChild(courseCard);
+      });
+    } catch (error) {
+      console.error("Error loading enrolled courses:", error);
+      showStatusMessage("Error loading enrolled courses: " + error.message, "danger");
     }
-
-    enrolled.forEach(data => {
-      const course = Array.from(courseSnapshot.docs).find(doc => doc.id === data.courseId);
-      if (!course) return;
-      const courseData = course.data();
-      const courseCard = document.createElement("div");
-      courseCard.className = "course-card";
-      courseCard.innerHTML = `
-        <h5>${courseData.title}</h5>
-        <p>${courseData.startDate} to ${courseData.endDate}</p>
-        <button class="btn btn-primary" onclick="goToCourse('${course.id}')">Go to Course</button>
-      `;
-      enrolledCoursesDiv.appendChild(courseCard);
-    });
   }
 
   loadEnrolledCourses();
@@ -132,6 +232,16 @@
   function logout() {
     localStorage.removeItem("student");
     location.href = "../index.html";
+  }
+
+  // Sidebar toggle function for mobile
+  window.toggleSidebar = function () {
+    const sidebar = document.getElementById("sidebar");
+    const mainContent = document.querySelector(".main-content-wrapper");
+    if (sidebar && mainContent) {
+      sidebar.classList.toggle('show');
+      mainContent.classList.toggle('shifted');
+    }
   }
 </script>
 </body>
