--- a/Student/student_dashboard.html
+++ b/Student/student_dashboard.html
@@ -1,4 +1,3 @@
-<!-- student_dashboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,13 +8,80 @@
   <style>
     body {
       background-color: #f4f6f9;
+      font-family: 'Segoe UI', sans-serif; /* Preserving your font choice */
+      margin: 0; /* Ensure no default body margin */
     }
-    .sidebar {
-      height: 100vh;
-      background-color: #2A5C88;
-      color: white;
-      padding: 1rem;
+
+    /* Hide toggle button by default (for larger screens) */
+    .toggle-btn {
+      display: none;
     }
+
+    /* Sidebar styles for large screens (md and up) */
+    @media (min-width: 768px) {
+      .sidebar {
+        min-height: 100vh;
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+        position: fixed; /* Fixed sidebar on desktop */
+        top: 0;
+        left: 0;
+        width: 250px; /* Define a fixed width for desktop sidebar */
+        overflow-y: auto;
+      }
+      /* Adjust main content to make space for the fixed sidebar */
+      .main-content-wrapper {
+        margin-left: 250px; /* Offset for the fixed sidebar */
+        padding: 2rem; /* Add padding for content */
+      }
+    }
+
+    /* Sidebar styles for small screens (below md) */
+    @media (max-width: 767.98px) {
+      .sidebar {
+        position: fixed;
+        width: 250px; /* Define width for mobile sidebar */
+        z-index: 1000;
+        transform: translateX(-100%); /* Hidden by default */
+        transition: transform 0.3s ease-in-out;
+        height: 100vh; /* Full height on mobile */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        padding: 1rem;
+      }
+
+      .sidebar.show {
+        transform: translateX(0); /* Show when 'show' class is added */
+      }
+
+      /* Toggle button visibility and styling for mobile */
+      .toggle-btn {
+        display: block !important; /* Ensure it's visible on mobile */
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1001; /* Above sidebar */
+        background-color: #2A5C88; /* Your specified color */
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        font-size: 1.2rem;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      /* Adjust main content when sidebar is shown on small screens */
+      .main-content-wrapper {
+        padding: 2rem 1rem; /* Default padding for mobile, adjusted for small screens */
+        transition: transform 0.3s ease-in-out;
+      }
+      .main-content-wrapper.shifted {
+        transform: translateX(250px); /* Shift content when sidebar is open */
+      }
+    }
+
+    /* Common sidebar link styles */
     .sidebar a {
       display: block;
       padding: 0.75rem 1rem;
@@ -25,11 +91,10 @@
       border-radius: 8px;
     }
     .sidebar a:hover, .sidebar a.active {
-      background-color: #1f4568;
+      background-color: #1f4568; /* Your specified hover/active color */
     }
-    .main-content {
-      padding: 2rem;
-    }
+
+    /* Main content specific styles */
     .dashboard-title {
       color: #2A5C88;
       font-weight: 600;
@@ -42,13 +107,29 @@
       margin-bottom: 1rem;
       background-color: white;
     }
+
+    /* Custom status message styling */
+    #statusMessage {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1200;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      display: none; /* hidden by default */
+    }
   </style>
 </head>
 <body>
+
+<!-- Toggle button for mobile -->
+<button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+
 <div class="container-fluid">
   <div class="row">
     <!-- Sidebar -->
-    <div class="col-md-3 sidebar">
+    <div class="sidebar" id="sidebar">
       <h4 class="mb-4">Student Panel</h4>
       <a href="student_dashboard.html" class="active">Dashboard</a>
       <a href="our_course.html">Course History</a>
@@ -56,7 +137,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="col-md-9 main-content">
+    <div class="col-12 col-md-9 main-content-wrapper">
       <h2 class="dashboard-title">Welcome 👋</h2>
       <p><em id="shayari"></em></p>
 
@@ -97,16 +178,21 @@
   </div>
 </div>
 
+<!-- Custom Status Message -->
+<div id="statusMessage" class="alert"></div>
+
 <!-- Firebase & Firestore -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-import {
-  getFirestore,
-  collection,
-  getDocs,
-  query,
-  where
-} from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";;
+  import {
+    getFirestore,
+    collection,
+    getDocs,
+    query,
+    where,
+    doc,
+    setDoc
+  } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
@@ -128,73 +214,111 @@ import {
   document.getElementById("shayari").innerText = shayaris[Math.floor(Math.random() * shayaris.length)];
 
   const availableCoursesDiv = document.getElementById("availableCourses");
+  const statusMessageDiv = document.getElementById("statusMessage");
 
-async function loadCourses() {
-  const student = JSON.parse(localStorage.getItem("student"));
-  if (!student) {
-    alert("Unauthorized access. Please login again.");
-    location.href = "../index.html";
-    return;
+  // Function to display custom status messages
+  function showStatusMessage(message, type = 'info') {
+    statusMessageDiv.textContent = message;
+    statusMessageDiv.className = `alert mt-3 alert-${type}`;
+    statusMessageDiv.style.display = 'block';
+    setTimeout(() => {
+      statusMessageDiv.style.display = 'none';
+    }, 3000); // Hide after 3 seconds
   }
 
-  // Step 1: Find student document ID by enrollment
-  const studentsRef = collection(db, "students");
-  const q = query(studentsRef, where("enrollment", "==", student.enrollment));
-  const studentSnap = await getDocs(q);
+  async function loadCourses() {
+    const student = JSON.parse(localStorage.getItem("student"));
+    if (!student) {
+      showStatusMessage("Unauthorized access. Please login again.", "danger");
+      location.href = "../index.html";
+      return;
+    }
 
-  if (studentSnap.empty) {
-    alert("Student record not found!");
-    location.href = "../index.html";
-    return;
+    // Step 1: Find student document ID by enrollment
+    const studentsRef = collection(db, "students");
+    const q = query(studentsRef, where("enrollment", "==", student.enrollment));
+    let studentSnap;
+    try {
+      studentSnap = await getDocs(q);
+    } catch (error) {
+      console.error("Error fetching student record:", error);
+      showStatusMessage("Error fetching student record. Please try again.", "danger");
+      return;
+    }
+
+    if (studentSnap.empty) {
+      showStatusMessage("Student record not found!", "danger");
+      location.href = "../index.html";
+      return;
+    }
+
+    const studentDoc = studentSnap.docs[0];
+    const studentDocId = studentDoc.id;
+
+    // Step 2: Fetch all courses
+    let coursesSnapshot;
+    try {
+      coursesSnapshot = await getDocs(collection(db, "courses"));
+    } catch (error) {
+      console.error("Error fetching courses:", error);
+      showStatusMessage("Error fetching courses. Please try again.", "danger");
+      return;
+    }
+
+    // Step 3: Fetch enrollments for this student
+    let enrollmentsSnapshot;
+    try {
+      enrollmentsSnapshot = await getDocs(collection(db, "enrollments"));
+    } catch (error) {
+      console.error("Error fetching enrollments:", error);
+      showStatusMessage("Error fetching enrollments. Please try again.", "danger");
+      return;
+    }
+
+    const enrolledCourseIds = new Set();
+    enrollmentsSnapshot.forEach(docSnap => {
+      const data = docSnap.data();
+      if (data.enrollment === student.enrollment) {
+        enrolledCourseIds.add(data.courseId);
+      }
+    });
+
+    // Step 4: Show allowed courses and mark enrolled ones
+    availableCoursesDiv.innerHTML = "";
+    let coursesDisplayed = 0;
+
+    coursesSnapshot.forEach(docSnap => {
+      const course = docSnap.data();
+      const courseId = docSnap.id;
+
+      const allowedStudents = course.allowedStudents || [];
+      if (!allowedStudents.includes(studentDocId)) {
+        return; // Skip courses not allowed for this student
+      }
+
+      const isEnrolled = enrolledCourseIds.has(courseId);
+
+      const courseDiv = document.createElement("div");
+      courseDiv.className = "course-card";
+
+      courseDiv.innerHTML = `
+        <h5>${course.title}</h5>
+        <p>${course.startDate} to ${course.endDate}</p>
+        <button class="btn ${isEnrolled ? "btn-secondary" : "btn-success"} enroll-btn"
+          data-course-id="${courseId}"
+          ${isEnrolled ? "disabled" : `onclick="openEnrollModal('${courseId}')"`}>
+          ${isEnrolled ? "Enrolled" : "Enroll"}
+        </button>
+      `;
+
+      availableCoursesDiv.appendChild(courseDiv);
+      coursesDisplayed++;
+    });
+
+    if (coursesDisplayed === 0) {
+      availableCoursesDiv.innerHTML = "<p>No courses available for you yet.</p>";
+    }
   }
-
-  const studentDoc = studentSnap.docs[0];
-  const studentDocId = studentDoc.id;
-
-  // Step 2: Fetch all courses
-  const coursesSnapshot = await getDocs(collection(db, "courses"));
-
-  // Step 3: Fetch enrollments for this student
-  const enrollmentsSnapshot = await getDocs(collection(db, "enrollments"));
-  const enrolledCourseIds = new Set();
-  enrollmentsSnapshot.forEach(docSnap => {
-    const data = docSnap.data();
-    if (data.enrollment === student.enrollment) {
-      enrolledCourseIds.add(data.courseId);
-    }
-  });
-
-  // Step 4: Show allowed courses and mark enrolled ones
-  availableCoursesDiv.innerHTML = "";
-
-  coursesSnapshot.forEach(docSnap => {
-    const course = docSnap.data();
-    const courseId = docSnap.id;
-
-    const allowedStudents = course.allowedStudents || [];
-    if (!allowedStudents.includes(studentDocId)) {
-      return; // Skip courses not allowed for this student
-    }
-
-    const isEnrolled = enrolledCourseIds.has(courseId);
-
-    const courseDiv = document.createElement("div");
-    courseDiv.className = "course-card";
-
-    courseDiv.innerHTML = `
-      <h5>${course.title}</h5>
-      <p>${course.startDate} to ${course.endDate}</p>
-      <button class="btn ${isEnrolled ? "btn-secondary" : "btn-success"} enroll-btn"
-        data-course-id="${courseId}"
-        ${isEnrolled ? "disabled" : `onclick="openEnrollModal('${courseId}')"`}>
-        ${isEnrolled ? "Enrolled" : "Enroll"}
-      </button>
-    `;
-
-    availableCoursesDiv.appendChild(courseDiv);
-  });
-}
-
 
   loadCourses();
 
@@ -212,7 +336,7 @@ async function loadCourses() {
         enrolledAt: new Date().toISOString()
       });
 
-      alert("Enrolled successfully!");
+      showStatusMessage("Enrolled successfully!", "success");
       const button = document.querySelector(`.enroll-btn[data-course-id="${courseId}"]`);
       if (button) {
         button.disabled = true;
@@ -223,7 +347,8 @@ async function loadCourses() {
       modal.hide();
       enrollForm.reset();
     } catch (err) {
-      alert("Error enrolling: " + err.message);
+      console.error("Error enrolling:", err);
+      showStatusMessage("Error enrolling: " + err.message, "danger");
     }
   });
 </script>
@@ -231,22 +356,35 @@ async function loadCourses() {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   window.openEnrollModal = function(courseId) {
-  const student = JSON.parse(localStorage.getItem("student"));
-  if (!student) return alert("Login expired. Please login again.");
+    const student = JSON.parse(localStorage.getItem("student"));
+    if (!student) {
+      showStatusMessage("Login expired. Please login again.", "danger");
+      return;
+    }
 
-  document.getElementById("selectedCourseId").value = courseId;
-  document.getElementById("studentName").value = `${student.firstName} ${student.lastName}`;
-  document.getElementById("enrollmentNumber").value = student.enrollment;
-  document.getElementById("emailId").value = student.email;
+    document.getElementById("selectedCourseId").value = courseId;
+    document.getElementById("studentName").value = `${student.firstName} ${student.lastName}`;
+    document.getElementById("enrollmentNumber").value = student.enrollment;
+    document.getElementById("emailId").value = student.email;
 
-  const enrollModal = new bootstrap.Modal(document.getElementById("enrollModal"));
-  enrollModal.show();
-};
+    const enrollModal = new bootstrap.Modal(document.getElementById("enrollModal"));
+    enrollModal.show();
+  };
 
   window.logout = () => {
     localStorage.removeItem("student");
     location.href = "../index.html";
   };
+
+  // Sidebar toggle function for mobile
+  window.toggleSidebar = function () {
+    const sidebar = document.getElementById("sidebar"); // Use the ID directly
+    const mainContent = document.querySelector(".main-content-wrapper");
+    if (sidebar && mainContent) {
+      sidebar.classList.toggle('show');
+      mainContent.classList.toggle('shifted');
+    }
+  }
 </script>
 </body>
 </html>
